kyy-k8s-config/src/app/backend/wechat-web/wechat-web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: wechat-web
  name: wechat-web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: wechat-web
    spec:
      containers:
        - args:
            - --registry_address=consul-server-bootstrap:8500
          image: registry.cn-qingdao.aliyuncs.com/wechat-open/web:v201907101725
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          name: wechat-web
          resources: {}
      restartPolicy: Always
