kyy-k8s-config/src/app/backend/wechat-web/wechat-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wechat-web
  name: wechat-web
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: wechat-web
